overlap issue fixed.

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
 @media screen and (max-width:600px) {
   .home-text-container{
     width: auto;
-    height: 50vh;
+    min-height: 50vh;
     justify-content: flex-start;
   }
 }
